[project]
name = "share"
version = "0.4.0"
description = "CLI file sharing with short links and download tracking. Backed by Cloudflare R2 + Workers."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.54",
    "cloudflare>=4.3.1",
    "Pillow>=11.0.0",
    "rich>=14.3.3",
    "sqids>=0.5.0",
]

[project.scripts]
share = "share:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
