[project]
name = "share"
version = "0.5.1"
description = "CLI file sharing and link shortening. Backed by Cloudflare R2 + Workers."
readme = "README.md"
authors = [{ name = "Adrian Galilea", email = "adriangalilea@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.54",
    "cloudflare>=4.3.1",
    "Pillow>=11.0.0",
    "rich>=14.3.3",
    "sqids>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/adriangalilea/share"
Repository = "https://github.com/adriangalilea/share"
Issues = "https://github.com/adriangalilea/share/issues"

[project.scripts]
share = "share:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
